--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body{
     height: 24px;
     width: 24px;
     margin-left: 5px;
-    filter: grayscale(1) invert(0.7);
+    filter: invert(75%) sepia(50%) saturate(1000%) hue-rotate(350deg) brightness(110%) contrast(101%);
     transition: filter 0.3s ease;
 }
 
